<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="actividades.RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="800dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="center"
            android:padding="14dp"
            android:text="@string/labelTituloRegistro"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#212121"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            android:typeface="sans" />

        <EditText
            android:id="@+id/txtRegNombres"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:gravity="left"
            android:hint="Nombres"
            android:inputType="text"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/txtRegApellidos"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:gravity="left"
            android:hint="Apellidos"
            android:inputType="text"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/txtRegUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:gravity="left"
            android:hint="Username"
            android:inputType="text"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/txtRegPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:gravity="left"
            android:hint="Password"
            android:inputType="textPassword"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/txtRegEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:gravity="left"
            android:hint="Email"
            android:inputType="text"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/txtRegTelefono"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:gravity="left"
            android:hint="Telefono"
            android:inputType="text"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/txtRegDireccion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:gravity="left"
            android:hint="Direccion"
            android:inputType="text"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="119dp"
            android:layout_height="37dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="8dp"
            android:background="#101010"
            android:text="@string/btnRegistrar"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="384dp"
            android:layout_height="46dp"
            android:fontFamily="sans-serif-light"
            android:gravity="right"
            android:text="@string/labelTieneCuenta"
            android:textColor="#212121"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>